--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.springframework.samples</groupId>
-  <artifactId>spring-petclinic</artifactId>
-  <version>2.2.0.BUILD-SNAPSHOT</version>
+  <groupId>com.epam_labs.kosyiev</groupId>
+  <artifactId>DEMO3</artifactId>
+  <version>2.2.0.BUILD-RELEASE</version>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
